--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "predeploy": "pnpm run build",
     "deploy": "gh-pages -d build"
   },
   "homepage": "https://wlgggy.github.io/react-project-02/",
